--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+
+<%= cl_image_tag "dveepbmtwlwsqza05jkz", width: 150, height: 150, crop: :thumb, gravity: :face %>
+
 <h1>Articles</h1>
 
 <table>
