--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @article.photo.url(:bright_face) %>
+
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @article.photo, height: 300, width: 400, crop: :fill %>')" >
+
+
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
